--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-AlchemyCraftingGame/[Ll]ibrary/
-AlchemyCraftingGame/[Tt]emp/
-AlchemyCraftingGame/[Oo]bj/
-AlchemyCraftingGame/[Bb]uild/
-AlchemyCraftingGame/[Bb]uilds/
-AlchemyCraftingGame/[Ll]ogs/
-AlchemyCraftingGame/[Uu]ser[Ss]ettings/
+AbstracSon/[Ll]ibrary/
+AbstracSon/[Tt]emp/
+AbstracSon/[Oo]bj/
+AbstracSon/[Bb]uild/
+AbstracSon/[Bb]uilds/
+AbstracSon/[Ll]ogs/
+AbstracSon/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -73,4 +73,3 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-AbstracSon/Temp/FSTimeGet-22c28e75f0ff6274e83d686224b73cd4
